Fix header heading-1 overlaping

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,7 +7,7 @@
   padding: 8rem;
   padding-top: 4rem;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-rows: 1fr min-content minmax( min-content, 6rem) 1fr;
   grid-row-gap: 1.5rem;
   grid-template-columns: minmax(min-content, max-content);
   justify-content: center;
